8213845: ARM32: Interpreter doesn't call result handler after native calls

Reviewed-by: aph