src/hotspot/cpu/arm/macroAssembler_arm.hpp
@@ -853,6 +853,8 @@ public:
     sub(dst, r1, AsmOperand(r2, lsl, shift));
   }
 
+  // C 'boolean' to Java boolean: x == 0 ? 0 : 1
+  void c2bool(Register x);
 
     // klass oop manipulations if compressed
 
